# trading-bots

./: .editorconfig  README.md  bots.py  pyproject.toml  requirements.txt  setup.cfg
example_bots/any_to_any/: README.md  __init__.py  bot.py
example_bots/example/: __init__.py  bot.py
example_bots/relative_orders/: README.md  __init__.py  bot.py
example_bots/relative_orders/configs/: default.yml
example_bots/simple_limit/: README.md  __init__.py  bot.py
example_bots/simple_limit/configs/: default.yml
example_bots/technical_analysis/: README.md  __init__.py  bot.py
tests/: test_clients.py  test_converter.py  test_storage.py
trading_bots/: __init__.py  __main__.py  __version__.py  utils.py
trading_bots/bots/: __init__.py  base.py  logging.py  registry.py  tasks.py
trading_bots/conf/: __init__.py  defaults.py  global_settings.py
trading_bots/contrib/: clients.py  errors.py  models.py  money.py  utils.py
trading_bots/contrib/clients/: kraken.py
trading_bots/contrib/converters/: base.py  bitcoin_average.py  coinmarketcap.py  currencylayer.py  open_exchange_rates.py
trading_bots/contrib/exchanges/: base.py
trading_bots/contrib/exchanges/bitfinex/: __init__.py  clients.py
trading_bots/contrib/exchanges/bitstamp/: __init__.py  clients.py
trading_bots/contrib/exchanges/buda/: __init__.py  clients.py
trading_bots/contrib/exchanges/kraken/: __init__.py  clients.py
trading_bots/core/: exceptions.py  logging.py  storage.py  utils.py
trading_bots/core/management/: __init__.py  templates.py
